--- a/pages/index.html
+++ b/pages/index.html
@@ -19,7 +19,7 @@
   <body>
     <header class="header">
       <div class="logo-box">
-        <img src="img/logo-white.png" alt="logo" class="logo" />
+        <img src="../img/logo-white.png" alt="logo" class="logo" />
       </div>
 
       <div class="text-box">
